--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
       <version>5.2.10.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.196</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
